[package]
name = "sim_25121701"
version = "0.1.0"
edition = "2024"

[dependencies]
ode_solvers = "0.6.1"
plotters = "0.3.7"
rayon = "1.11.0"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 1
split-debuginfo = "unpacked"
panic = "unwind"
strip = false

[profile.test]
opt-level = 0
debug = true
lto = false
codegen-units = 1
split-debuginfo = "unpacked"
panic = "unwind"
strip = false
